# Pid

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Constants_8h.html  Constants_8h_source.html  Container_8h.html  Container_8h_source.html  Doxyfile  FitHelper_8h_source.html  Fitter_8h.html  Fitter_8h_source.html  Getter_8h.html  Getter_8h_source.html  Parameters_8h.html  Parameters_8h_source.html  ParticleFit_8h.html  ParticleFit_8h_source.html  PidConfig.cmake.in  PidLinkDef_8h_source.html  README.md  annotated.html  classPid_1_1BaseGetter-members.html  classPid_1_1BaseGetter.html  classPid_1_1Container-members.html  classPid_1_1Container.html  classPid_1_1CutGGetter-members.html  classPid_1_1CutGGetter.html  classPid_1_1Fitter-members.html  classPid_1_1Fitter.html  classPid_1_1Getter-members.html  classPid_1_1Getter.html  classPid_1_1Parameters-members.html  classPid_1_1Parameters.html  classPid_1_1ParticleFit-members.html  classPid_1_1ParticleFit.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  (+6 more)
.github/workflows/: clang.yml  cmake.yml
at_interface/: CMakeLists.txt  PidATLinkDef.h  PidFiller.cpp  PidFiller.cxx  PidFiller.h  PidFiller.hpp
bb/: BBLinkDef.h  BetheBlochHelper.cpp  BetheBlochHelper.h  BetheBlochShine.cpp  CMakeLists.txt  Shine.cpp  Shine.h  shine.cpp  shine.h
cmake_modules/: AnalysisTree.cmake
core/: BaseFitterHelper.cpp  BaseFitterHelper.h  BaseParticleFitModel.cpp  BaseParticleFitModel.h  CMakeLists.txt  FitParameter.cpp  FitParameter.h  FitParameterConstraint.cpp  FitParameterConstraint.h  FitParameterResult.cpp  FitParameterResult.h  FitParameterTrack.cpp  FitParameterTrack.h  FitterHelper.cpp  FitterHelper.h  Parametrization.cpp  Parametrization.h  ParticleFitModel.cpp  ParticleFitModel.h  PdgHelper.cpp  PdgHelper.h
docs/: Doxyfile  README.md
examples/shine/: CMakeLists.txt  FitBinnedTracks.cpp  FitResultsExplorer.cpp  RunFitShine.cpp  RunFitShine2.cpp  ShineDeDxParticleFitModel.cpp  ShineDeDxParticleFitModel.h
input/: botv_12agev_default.root  cbm_input_botvina_12agev.root  cuts.root  na49_158_graphical.C  pid_arsc40_graphical.C  pid_pbpb13_graphical.C  pid_pbpb30_TShine.C  test_input.root
macro/: RooFitTest.C  RunGetter.C  WeightFit.C  WeightFit2D.C  allneg.root  allpos.root  deutron.root  drawFits.C  fit_botvina.C  fit_botvina12.C  fit_botvina3.C  fits.root  he3.root  kaonneg.root  kaonpos.root  pid.cpp  pid_getter.root  pionneg.root  pionpos.root  proton.root  rootlogon.C
macro2/: RunGetter.C  fit_botvina13j.C  pid.cpp
macro3/: ConfigurationFile.txt  drawFits.C  fit_botvina14.C  fit_botvina3.C  gfit_botvina14bad.C  optionFile.txt  parmeterGraph2.C
macro4/: ConfigurationFile.txt  drawFits.C  fit_botvina14.C  parmeterGraph.C  parmeterGraph2.C
macro5/: ConfigurationFile.txt  rootlogon.C
macro6/: ConfigurationFile.txt  RooFitTest.C  drawFits.C  errMenager.C  parmeterGraph2.C
model/: AsymmetricGaussPDF.cpp  AsymmetricGaussPDF.h  AsymmetricGaussianPDF.cpp  AsymmetricGaussianPDF.h  BaseParticleFitModel.h  CMakeLists.txt  DeDxShineFitModel.cpp  DeDxShineFitModel.h  PidModelLinkDef.h  ShineDeDxParticleFitModel.cpp  ShineDeDxParticleFitModel.h
pid_new/: CMakeLists.txt
pid_new/bb/: BBLinkDef.h  BetheBlochHelper.cpp  BetheBlochHelper.h  BetheBlochShine.cpp  BetheBlochShine.h  BetheBlochShineLinkDef.h  CMakeLists.txt
pid_new/core/: BaseParticleFitModel.cpp  BaseParticleFitModel.h  CMakeLists.txt  FitParameter.cpp  FitParameter.h  FitterHelper.h  ParticleFitModel.cpp  ParticleFitModel.h  PdgHelper.cpp  PdgHelper.h
pid_new/examples/shine/: CMakeLists.txt  FitBinnedTracks.cpp  RunFitShine.cpp
pid_new/model/: AsymmetricGaussianPDF.cpp  AsymmetricGaussianPDF.h  CMakeLists.txt  PidModelLinkDef.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  Constants.h  Container.cpp  Container.h  CutGGetter.cpp  CutGGetter.h  FitHelper.h  Fitter.cpp  Fitter.h  Getter.cpp  Getter.h  Parameters.cpp  Parameters.h  ParticleFit.cpp  ParticleFit.h  ParticlePdf1D.cpp  ParticlePdf1D.h  ParticlePdf2D.cpp  ParticlePdf2D.h  PidLinkDef.h
tasks/: CMakeLists.txt  fill_at_pid.cpp  fill_mc_pid.cpp  fill_pid.cpp  fit_tof.cpp  run_pid.cpp
